Fill out references

--- a/14-references.6
+++ b/14-references.6
@@ -1,2 +1,615 @@
 .ss 12 0
 .TH References "Eclipse Phase"
+
+Eclipse Phase borrows liberally from many sources, which deserve recognition and credit. Gamemasters may also find them a good source of inspiration for adventures and campaigns.
+Further resources can be found on our website: http://eclipsephase.com
+
+.SH Fiction
+
+.SS Ian Banks
+
+\fBThe \[lq]Culture\[rq] Series\fR
+
+.RS 2
+Consider Phlebas
+
+The Use of Weapons
+
+The Player of Games
+
+The State of the Art
+
+Inversions
+
+Excession
+
+Look to Windward
+
+Matter
+.RE
+
+
+.SS Greg Bear
+
+Moving Mars
+
+Queen of Angels
+
+Slant
+
+
+.SS David Brin
+
+Earth
+
+\fBThe \[lq]Earthclan\[rq] series\fR
+
+.RS 2
+Startide Rising
+
+The Uplift War
+.RE
+
+Sundiver
+
+
+.SS Paul Di Filippo
+
+Ribofunk
+
+
+.SS Cory Doctorow
+
+Down and Out in the Magic Kingdom
+
+Eastern Standard Tribe
+
+
+.SS Greg Egan
+
+Axiomatic
+
+Diaspora
+
+Distress
+
+Permutation City
+
+Quarantine
+
+
+.SS Warren Ellis
+
+Crooked Little Vein
+
+
+.SS Kathleen Ann Goonan
+
+\fBThe \[lq]Nanotech Cycle\[rq]\fR
+
+.RS 2
+Queen City Jazz
+
+Mississippi Blues
+
+Crescent City Rhapsody
+
+Light Music
+.RE
+
+
+.SS Peter Hamilton
+
+\fBThe \[lq]Commonwealth Saga\[rq]\fR
+
+.RS 2
+Pandora’s Star
+
+Judas Unleashed
+.RE
+
+
+\fBThe \[lq]Greg Mandel Trilogy\[rq]\fR
+
+.RS 2
+Mindstar Rising
+
+A Quantum Murder
+
+The Nano Flower
+.RE
+
+
+.SS James Hogan
+
+Voyage from Yesteryear
+
+
+.SS Ken Macleod
+
+\fBThe \[lq]Fall Revolution\[rq] series\fR
+
+.RS 2
+The Star Fraction
+
+The Stone Canal
+
+The Cassini Division
+
+The Sky Road
+.RE
+
+Newton’s Wake
+
+
+.SS Richard Morgan
+
+\fBThe \[lq]Takeshi Kovacs\[rq] series\fR
+
+.RS 2
+Altered Carbon
+
+Broken Angels
+
+Woken Furies
+.RE
+
+Thirteen
+
+
+.SS Linda Nagata
+
+The Bohr Maker
+
+Deception Well
+
+Limit of Vision
+
+Tech Heaven
+
+Vast
+
+
+.SS Frederick Pohl
+
+Gateway
+
+
+.SS Alastair Reynolds
+
+Absolution Gap
+
+Chasm City
+
+The Prefect
+
+Pushing Ice
+
+Redemption Ark
+
+Revelation Space
+
+
+.SS Kim Stanley Robinson
+
+\fBThe \[lq]Mars Trilogy\[rq]\fR
+
+.RS 2
+Red Mars
+
+Blue Mars
+
+Green Mars
+.RE
+
+The Martians
+
+
+.SS Karl Schroeder
+
+Ventus
+
+
+.SS Dan Simmons
+
+\fB“Hyperion Cantos”\fR
+
+.RS 2
+Hyperion
+
+Fall of Hyperion
+
+Endymion
+
+Fall of Endymion
+.RE
+
+Ilium
+
+Olympos
+
+
+.SS Neal Stephenson
+
+Diamond Age
+
+
+.SS Bruce Sterling
+
+Caryatids
+
+Crystal Express
+
+Holy Fire
+
+Schismatrix Plus
+
+
+.SS Charles Stross
+
+Accelerando
+
+Glasshouse
+
+Halting State
+
+Iron Sunrise
+
+Singularity Sky
+
+Toast
+
+
+.SS Karen Traviss
+
+City of Pearl
+
+
+.SS Vernor Vinge
+
+Across Realtime
+
+A Deepness in The Sky
+
+A Fire Upon The Deep
+
+Rainbow’s End
+
+True Names and Other Dangers
+
+
+.SS Elisabeth Vonarburg
+
+Slow Engines of Time
+
+
+.SS Peter Watts
+
+Blindsight
+
+\fB\[lq]Rifters' Trilogy\[rq]\fR
+
+.RS 2
+Starfish
+
+Maelstrom
+
+Behemoth (ß-Max + Seppuku)
+.RE
+
+
+.SS Scott Westerfeld
+
+The Risen Empire
+
+The Killing of Worlds
+
+
+.SS Walter Jon Williams
+
+Aristoi
+
+Angel Station
+
+Voice of the Whirlwind
+
+
+.SS David Zindell
+
+The Broken God
+
+Neverness
+
+War in Heaven
+
+The Wild
+
+
+.SH Comics and Graphic Novels
+
+.SS Jamie Delano
+
+Narcopolis
+
+
+.SS Warren Ellis
+
+Doktor Sleepless
+
+Doom 2099
+
+Global Frequency
+
+Ministry of Space
+
+Ocean
+
+Transmetropolitan
+
+
+.SS Jonathan Hickman
+
+Transhuman
+
+
+.SS Grant Morrison
+
+The Filth
+
+The Invisibles
+
+
+.SS Masamune Shirow
+
+Ghost in the Shell
+
+Ghost in the Shell 1.5: Human-Error Processor
+
+Ghost in the Shell 2: Man/Machine Interface
+
+
+.SS Adam Warren
+
+Iron Man: Hypervelocity
+
+
+.SS Makoto Yukimura
+
+Planetes
+
+
+.SH Non-Fiction
+
+.SS Ronald Bailey
+
+Liberation Biology
+
+
+.SS Susan Blackmore
+
+The Meme Machine
+
+
+.SS Cynthia Brezeal
+
+Designing Sociable Robots
+
+
+.SS David Brin
+
+The Transparent Society
+
+
+.SS Richard Brodie
+
+Virus of the Mind: The New Science of the Meme
+
+
+.SS James Brook and Ian Boal (eds)
+
+Resisting the Virtual Life
+
+
+.SS Rodney Brooks
+
+Flesh and Machines: How Robots Will Change Us
+
+Cambrian Intelligence: The Early History of the New AI
+
+Critical Art Ensemble
+
+Digital Resistance
+
+Electronic Civil Disobedience
+
+The Electronic Disturbance
+
+Flesh Machine
+
+The Molecular Invasion
+
+The Marching Plague
+
+
+.SS Richard Dawkins
+
+The Selfish Gene
+
+
+.SS K. Eric Drexler
+
+Engines of Creation: The Coming Era of Nanotechnology
+
+
+.SS Freeman Dyson
+
+Disturbing the Universe
+
+Imagined Worlds
+
+
+.SS Ann Finkbeiner
+
+The Jasons
+
+Imaginary Weapons
+
+
+.SS Joel Garreau
+
+Radical Evolution
+
+
+.SS Adam Greenfield
+
+Everyware: The Dawning Age of Ubiquitous Computing
+
+
+.SS James Hughes
+
+Citizen Cyborg
+
+
+.SS Ray Kurzweil
+
+The Singularity is Near
+
+
+.SS Howard Rheingold
+
+Smart Mobs: The Next Social
+
+Revolution
+
+John Robb
+
+Brave New War
+
+Clay Shirky
+
+Here Comes Everybody
+
+
+.SS Bruce Sterling
+
+Shaping Things
+
+Tomorrow Now: Envisioning the
+
+Next Fifty Years
+
+
+.SS Gregory Stock
+
+Redesigning Humans: Our Inevitable Genetic Future
+
+
+.SS Simon Young
+
+Designer Evolution: A Transhumanist Manifesto
+
+
+.SH Roleplaying Games
+
+Blue Planet
+
+Burning Empires
+
+Call of Cthulhu
+
+CthulhuTech
+
+Cybergeneration
+
+Dawning Star
+
+Delta Green
+
+FreeMarket
+
+Gamma World
+
+GURPS: Transhuman Space
+
+Morrow Project
+
+Paranoia
+
+Shadowrun
+
+Shock: Social Science Fiction
+
+Traveller
+
+
+.SH Movies and Television
+
+Aeon Flux
+
+AI
+
+Alien series
+
+Andromeda
+
+Babylon 5
+
+Big O
+
+Blade Runner
+
+Cowboy Bebop
+
+Crusade
+
+District 9
+
+Dollhouse
+
+Dreamcatcher
+
+Event Horizon
+
+Ergo Proxy
+
+Firefly
+
+Gattaca
+
+Ghost in the Shell
+
+Ghost in the Shell: Innocence
+
+Ghost in the Shell: Stand Alone Complex
+
+Solid State Society
+
+Ghost in the Shell: Stand Alone Complex
+
+Ghost in the Shell: Stand Alone Complex
+
+2nd Gig
+
+The Island
+
+Jekyll
+
+Moon
+
+Pandorum
+
+Planetes
+
+Serenity
+
+Sleep Dealer
+
+Solaris
+
+Stargate and Stargate: Atlantis
+
+Sunshine
+
+Uzumaki
+
+Zardoz
